============================================================================
SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
============================================================================

Version 6.1.4 - not yet released
* memory leaks fixed
* calculations
  - fix miscalculation in start point chooser
* map
  - fix for the aircraft symbol
  - airspace rendering optimised
* Android
  - fix text rendering on Adreno GPUs

Version 6.1.3 - 2011/07/14
* devices
  - fix task declaration on PC
  - LX: correct byte alignment for task declaration
* calculations
  - reduce memory usage
  - finish: allow flight to boundary
  - Racing task, FAI Task: allow 11 turnpoints
  - task: support AGL maximum start height
* user interface
  - translation updates
  - new translations: Japanese, Ukrainian
  - support mouse wheel on Linux
  - fix duplicate text input in edit controls on PC
  - update info boxes after leaving full-screen
  - fix PNA model type
* map
  - fix map location when all devices fail
* Android
  - support hardware keyboard in custom XCI files
  - clip text in the "credits" dialog
  - catch Java exceptions in the text renderer
  - reduce texture memory usage on newer GPUs
  - fix terrain rendering on Mali-400 (Samsung Galaxy S II)

Version 6.1.2 - 2011/06/28
* devices
  - workaround for GPGGA/GPRMC clock difference
* calculations
  - reduce memory usage further
  - fix boundary routine of the key hole zone
  - set system clock only from a real GPS fix
  - set system clock again after device reconnect
  - MacCready setting defaults to safety MacCready on startup
* user interface
  - change low battery thresholds
  - manual and translation updates
  - fix UTC offset setting
  - fix overlapped InfoBox text
  - translation updates
* map
  - fixed coast line display (areas below zero no longer flooded)
* Linux
  - fix broken textures on GPUs with power-of-two dimensions
* Android
  - enable sound effects on task start, arm turn, GPS connection