@@ -182,6 +182,16 @@ is_android()
 }
 
 /**
+ * Does this device have little main memory?  On those, some expensive
+ * features are disabled.
+ */
+static inline bool
+HasLittleMemory()
+{
+  return is_ancient_hardware() || is_altair();
+}
+
+/**
  * Does this device have a pointer device? (mouse or touch screen)
  * @return True if a touch screen or mouse is assumed for the hardware
  * that XCSoar is running on, False if the hardware has only buttons
